Fix DelegationPolicy to handle null collection inputs.